# DocuMind

./: .gitignore  README.md  pyproject.toml
app/: auth.py  crud.py  database.py  main.py  start_all_workers.py
app/core/enum/: worker_task_status.py  worker_task_type.py
app/models/: __init__.py  document.py  document_chunk.py  document_metadata.py  processed_document.py  user.py  worker_task.py
app/notebooks/: test_bert_base_ner.ipynb
app/notebooks/convert2onnx/: xlmroberta_2_onnx.ipynb
app/notebooks/model_testing/: test_bert_base_ner.ipynb
app/routes/: auth.py  document.py  document_metadata.py  files.py  nlp.py  process_document.py  task.py
app/schemas/: document_chunk_schema.py  task.py  user.py
app/services/: document_chunk_service.py  document_metadata_service.py  document_service.py  file_service.py  ner_service.py  processed_doc_service.py  task_service.py  user_service.py  worker_task_service.py
app/vector_database/: qdrant_client.py
app/workers/: document_preprocessing.py  document_worker.py  document_worker_new.py  ner_worker.py
app/workers/document_worker/: document_worker.py  document_worker_processor.py
app/workers/ner_worker/: ner_worker.py  ner_worker_processor.py
app/workers/summarization_worker/: summarization_worker.py  summarization_worker_processor.py
